Dist: Include a style parameter in package.json to allow manage managers to easily use the style files.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "files": [
         "css/rowReorder.jqueryui.css"
     ],
+    "style": "css/rowReorder.jqueryui.css",
     "keywords": [
         "row reordering",
         "DataTables",
