--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
     "main": "js/rowReorder.jqueryui.js",
     "style": "css/rowReorder.jqueryui.css",
     "types": "./types/rowReorder.jQueryUI.d.ts",
-    "version": "1.2.7",
+    "version": "1.2.8",
     "files": [
         "css/**/*.css",
         "js/**/*.js"
     ],
     "keywords": [
         "RowReorder",
- "Row Reordering",
+        "Row Reordering",
         "jQuery UI",
- "jQueryUI",
+        "jQueryUI",
         "Datatables",
         "jQuery",
         "table",
@@ -21,9 +21,9 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-rowreorder": ">=1.2.7",
-        "datatables.net-jqui": ">=1.10.24",
-        "jquery": ">=1.7"
+        "jquery": ">=1.7",
+        "datatables.net-jqui": "^1.10.15",
+        "datatables.net-rowreorder": "1.2.8"
     },
     "moduleType": [
         "globals",
