--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     ],
     "keywords": [
         "RowReorder",
-        "Row Reordering",
+ "Row Reordering",
         "jQuery UI",
-        "jQueryUI",
+ "jQueryUI",
         "Datatables",
         "jQuery",
         "table",
@@ -21,8 +21,8 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-rowreorder": ">=1.2.7",
-        "datatables.net-jqui": ">=1.10.24",
+        "datatables.net-rowreorder": ">=1.2.8",
+        "datatables.net-jqui": ">=1.10.26-dev",
         "jquery": ">=1.7"
     },
     "moduleType": [
