--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "js/rowReorder.jqueryui.js",
     "module": "js/rowReorder.jqueryui.mjs",
     "style": "css/rowReorder.jqueryui.css",
-    "types": "./types/types.d.ts",
+    "types": "./types/rowReorder.jqueryui.d.ts",
     "version": "1.3.3",
     "files": [
         "css/**/*.css",
@@ -14,9 +14,9 @@
     ],
     "keywords": [
         "RowReorder",
-        "Row Reordering",
+ "Row Reordering",
         "jQuery UI",
-        "jQueryUI",
+ "jQueryUI",
         "Datatables",
         "jQuery",
         "table",
@@ -24,8 +24,8 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-rowreorder": ">=1.2.8",
-        "datatables.net-jqui": ">=1.12.1",
+        "datatables.net-rowreorder": ">=1.3.3",
+        "datatables.net-jqui": ">=1.13.4",
         "jquery": ">=1.7"
     },
     "moduleType": [
