--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "module": "js/rowReorder.jqueryui.mjs",
     "style": "css/rowReorder.jqueryui.css",
     "types": "./types/rowReorder.jqueryui.d.ts",
-    "version": "1.4.1",
+    "version": "1.5.0",
     "files": [
         "css/**/*.css",
         "js/**/*.js",
@@ -24,8 +24,8 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-rowreorder": ">=1.3.3",
-        "datatables.net-jqui": ">=1.13.4",
+        "datatables.net-rowreorder": "1.5.0",
+        "datatables.net-jqui": ">=1.11.0",
         "jquery": ">=1.7"
     },
     "moduleType": [
