--- a/nuget.nuspec
+++ b/nuget.nuspec
@@ -10,8 +10,8 @@
         <license type="expression">MIT</license>
         <tags>RowReorder  Row Reordering  jQuery UI  jQueryUI  Datatables jQuery table</tags>
         <dependencies>
-            <dependency id="datatables.net-rowreorder" version="1.2.8"/>
-            <dependency id="datatables.net-jqui" version="1.12.1"/>
+            <dependency id="datatables.net-rowreorder" version="1.5.0"/>
+            <dependency id="datatables.net-jqui" version="2.3.2"/>
         </dependencies>
         <contentFiles>
             <files include="**/*" buildAction="Content"/>
@@ -22,6 +22,10 @@
         <file src="js/rowReorder.jqueryui.js" target="contentFiles\any\any\wwwroot\js"/>
         <file src="js/rowReorder.jqueryui.min.js" target="content\Scripts"/>
         <file src="js/rowReorder.jqueryui.min.js" target="contentFiles\any\any\wwwroot\js"/>
+        <file src="js/rowReorder.jqueryui.min.mjs" target="content\Scripts"/>
+        <file src="js/rowReorder.jqueryui.min.mjs" target="contentFiles\any\any\wwwroot\js"/>
+        <file src="js/rowReorder.jqueryui.mjs" target="content\Scripts"/>
+        <file src="js/rowReorder.jqueryui.mjs" target="contentFiles\any\any\wwwroot\js"/>
         <file src="css/rowReorder.jqueryui.css" target="content\Content"/>
         <file src="css/rowReorder.jqueryui.css" target="contentFiles\any\any\wwwroot\css"/>
         <file src="css/rowReorder.jqueryui.min.css" target="content\Content"/>
